fix(ui): Fix layout issues on the sample tab
Fix issues with the layout when adjusting the horizontal splitter. Avoid cropping from the right, and make mz precision input fixed width to avoid it occupying unnecessary space

--- a/server/frontend/src/style.css
+++ b/server/frontend/src/style.css
@@ -200,6 +200,16 @@
     place-items: center;
   }
 
+  /* Pane tab wrappers */
+  .pane-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 100%;
+    height: calc(100vh - 180px);
+    overflow: hidden;
+  }
+
   /* measurement mode */
 
   .measure-mode .p-togglebutton.p-togglebutton-checked::before {
